<resources>
    <string name="app_name">Cines35MM</string>
    <string name="title_activity_home">Cines 35MM</string>
    <string name="title_activity_home_admin">Cines 35MM - Administrador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">[AQUI VA USERNAME]</string>
    <string name="action_settings">Settings</string>
    <string name="nav_option_inicio">Inicio</string>
    <string name="nav_option_recomendaciones">Recomendaciones</string>
    <string name="nav_option_Favoritas">Favoritas</string>
    <string name="nav_option_comentarios">Mis Comentarios</string>
    <string name="nav_option_usuarios">Usuarios</string>
    <string name="nav_option_peliculas">Películas</string>
    <string name="nav_option_salir">Salir</string>

</resources>
