<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_option_inicio" />
        <item
            android:id="@+id/nav_recomendaciones"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_option_recomendaciones" />
        <item
            android:id="@+id/nav_favoritas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_option_Favoritas" />
        <item
            android:id="@+id/nav_comentarios"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_option_comentarios" />
        <item
            android:id="@+id/nav_peliculas"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_option_peliculas" />
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_option_usuarios" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_option_salir" />
    </group>
</menu>
